corrected overflow

--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -68,3 +68,7 @@ img{
     margin-left: 25vw;
     gap: 10vw;
 }
+.section{
+    max-width: 100vw;
+    overflow: hidden;
+}
